--- a/vercel.json
+++ b/vercel.json
@@ -12,10 +12,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "backend/server.js"
     },
-   
+    {
+      "src": "/(.*)",
+      "dest": "frontend/build/$1"
+    },
     {
       "src": "/track",
       "dest": "frontend/build/$1"
