Revert "Use softer orange as theme color"

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -26,6 +26,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#F2994A",
+  "theme_color": "#ff6600",
   "background_color": "#1a1a1a"
 }
